# Strategy-pattern-particle-system

./: Button.hpp  CMakeLists.txt  DrawStrategy.hpp  Game.hpp  Particle.hpp  README.md  SFMLParticleSystemVS.sln  SFMLParticleSystemVS.vcxproj  SFMLParticleSystemVS.vcxproj.filters  get_dependencies.sh  main.cpp
